Fix Issue 54: Wireframe version of index.html is temporarily shown upon first-time load
1. Initially, hide pages using CSS visibility attributes.
2. Show a message using the message div while resources are being loaded.
3. When the main module is ready to show content pages, it will modify their
CSS visibility attributes to uncover them.

--- a/app/css/mobile_opac_wireframe.css
+++ b/app/css/mobile_opac_wireframe.css
@@ -101,3 +101,6 @@ dd {
 .search_bar .ui-slider-switch {
 	width: 12em;
 }
+div[data-role="page"] {
+	visibility: hidden;
+}
